Fix scrollbar style (fix #1671)

--- a/src/utils/gui-settings/gui-settings.scss
+++ b/src/utils/gui-settings/gui-settings.scss
@@ -796,6 +796,7 @@ html.elegant-scrollbar {
   ::-webkit-scrollbar-thumb:hover {
     background: #888;
   }
+  &,
   * {
     scrollbar-color: #aaa transparent;
     scrollbar-width: thin;
